5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1709_3069.log
== TEST (2019-05-02 10:35:46) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracão do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x == (b * 2 + c * 2)
	else:
		b =! ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
else:
	print(x)
		
-- ERROR:
File "XXXX", line 14
    b =! ("FURIA")or("GRITO")or("TOQUE")
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:15) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracão do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x == (b * 2 + c * 2)
	else:
		b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
else:
	print(x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:36:43) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x == (b * 2 + c * 2)
	else:
		b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
else:
	print(x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:37:41) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
else:
	print(x)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:38:57) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
else:
	print( x )
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print( x )
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:39:30) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
else:
	print( x )
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print( x )
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:41:09) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")
	else:
		print( x )
		
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:09) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)
else:
	b != ("FURIA")or("GRITO")or("TOQUE")
		print("Entrada invalida")

		
-- ERROR:
File "XXXX", line 17
    print("Entrada invalida")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:24) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)
else:
	b != ("FURIA")or("GRITO")or("TOQUE")
	print("Entrada invalida")

		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:42:44) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)


		
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:43:09) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
else:
	print(x)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:44:14) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))
conta = x
if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
else:
	print(conta)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    conta = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:44:50) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    conta = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:45:57) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b = "FURIA"):
		x == (10 + b * 2)
	elif(b = "GRITO"):
		x == (6 + b * 2)
	elif(b = "TOQUE"):
		x == (b * 2 + c * 2)
	else:
		print(x)


		
-- ERROR:
File "XXXX", line 7
    if(b = "FURIA"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:46:16) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x == (10 + b * 2)
	elif(b == "GRITO"):
		x == (6 + b * 2)
	elif(b == "TOQUE"):
		x == (b * 2 + c * 2)
	else:
		print(x)


		
-- ERROR:
File "XXXX", line 7
    if(b = "FURIA"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:47:40) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
		print(x)
	elif(b == "GRITO"):
		x = (6 + b * 2)
		print(x)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
		print(x)
	
		


		
-- ERROR:
File "XXXX", line 7
    if(b = "FURIA"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:00) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
else:
	print(x)
		
	
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:50:15) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
else:
	print("x")
		
	
		


		
-- OUTPUT:
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:51:11) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)
		
	
		


		
-- OUTPUT:
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:51:32) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))

if(b<1) or (b>8) and (c<1) or (c>8):
	print("Entrada invalida")
	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)
		
	
		


		
-- OUTPUT:
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:14) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))
if(b<1) or (b>8) and (c<1) or (c>8):

	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
	else:
		print(x)
		
	
		


		
-- OUTPUT:
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:52:59) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))
if(b<1) or (b>8) and (c<1) or (c>8):

	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
else:
	print(x)
		
	
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:53:22) 
-- CODE:
a = input("digite qual foi o ataque: ").upper()
b = int(input("digite a numeracao do dado: "))
c = int(input("digite a numeracao do segundo dado: "))
if(b<1) or (b>8) and (c<1) or (c>8):

	if(b == "FURIA"):
		x = (10 + b * 2)
	elif(b == "GRITO"):
		x = (6 + b * 2)
	elif(b == "TOQUE"):
		x = (b * 2 + c * 2)
else:
	print(x)
		
	
		


		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
